# grib

./: main.py  pyproject.toml
grib/: __init__.py  grib.py  util.py
grib.egg-info/: PKG-INFO  SOURCES.txt
grib/core/: board.py  board_object.py  gameobject.py  grid.py  shape.py  types.py
queens/: main.py
tests/: grib_tests.py
