[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grib"
version = "0.1.0"
authors = [{ name = "Michael Savage", email = "michaelsavage1707@gmail.com" }]
description = "Python library for managing grids"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # List your dependencies here
    # "requests>=2.25.0",
    # "numpy>=1.19.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/your-package-name"
